# stsm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: maiden.cmake
game/: CMakeLists.txt
game/include/game/: crewman.h  planet.h  planetclass.h  shiptype.h  station.h  stationtype.h
game/src/: crewman.cpp  debug.cpp  main.cpp  planetclass.cpp
gui/: CMakeLists.txt
gui/include/gui/: clickable.h  clickableimpl.h  drawable.h  fontmanager.h  gui.h  hexagon.h  hexboard.h  hud.h  mainmenu.h  mainwindow.h  menubutton.h  mousedata.h  splashscreen.h  texturecache.h
gui/src/: clickable.cpp  clickableimpl.cpp  fontmanager.cpp  hexagon.cpp  hexboard.cpp  hud.cpp  mainmenu.cpp  mainwindow.cpp  mousedata.cpp  splashscreen.cpp  texturecache.cpp
res/tex/: hexagon.pdn
util/: CMakeLists.txt
util/include/util/: debug.h  enum.h  qstr.h
util/src/: debug.cpp
